Fix mobile view margin and units such that cards don't overflow container

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 * {
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 /* hide arrows in number input */
@@ -11,17 +13,16 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .container {
-  max-width: 400px;
+  max-width: 25rem;
   height: 70vh;
-  margin: 10rem auto;
-  border: 1px solid black;
+  margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
 }
 
 .card-display {
-  height: 25vh;
-  max-width: 400px;
+  height: 65%;
+  min-width: 400px;
   background-image: url('./images/bg-main-mobile.png');
 }
 
@@ -30,7 +31,6 @@ form {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 5rem;
 }
 
 input {
@@ -47,13 +47,13 @@ input {
 }
 
 .card-back {
-  top: 30px;
-  left: 70px;
+  top: 1rem;
+  left: 3rem;
 }
 
 .card-front {
-  left: 20px;
-  bottom: 40px;
+  left: 1.2rem;
+  bottom: 2rem;
 }
 
 .card-image-container {
@@ -96,7 +96,7 @@ input {
 
   .card-display {
     height: 100vh;
-    width: 20rem;
+    width: 30vw;
   }
 
   .card-front {
